--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_KEY=base64:1Ynl/S+cvwKxW6jCNV9ClVauvbK5/D82U0U3P+2bdaI=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
-APP_LOCALE=en
+APP_LOCALE=vi
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
